--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Meu Hello World</title>
 </head>
 <body>
+
     <h1>Olá, Mundo!</h1>
-    <p>Essa é minha primeira página em HTML.</p>   
+    <p>Essa é minha primeira página em HTML.</p> 
+
+    <img src="https://picsum.photos/400" alt="imagem aleatória"> 
+     
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolor itaque obcaecati error eveniet magnam quam officiis quo est ex, esse, officia consequuntur laboriosam molestiae consectetur, maiores in ut saepe?</p>
 </body>
 </html>
